@@ -104,6 +104,7 @@ GList* ags_jack_client_find(GList *jack_client,
 
 void ags_jack_client_open(AgsJackClient *jack_client,
 			  gchar *client_name);
+void ags_jack_client_close(AgsJackClient *jack_client);
 
 void ags_jack_client_add_device(AgsJackClient *jack_client,
 				GObject *jack_device);
